Minor update to notes

--- a/gp_calibration_questions.tex
+++ b/gp_calibration_questions.tex
@@ -535,7 +535,7 @@ This expectation is very sensitive to both the GP uncertainty estimates and $\ta
 \end{itemize}
 
 
-\section{Meeting: 9/8/2022}
+\section{Meeting: 9/9/2022}
 \subsection{Updates}
 \begin{itemize}
 \item Updated code to allow for multiple parameter tests. Currently only allows independent Gaussian priors for each parameter. 
@@ -551,6 +551,7 @@ This expectation is very sensitive to both the GP uncertainty estimates and $\ta
 	\item RMSE, MAE
 	\item Metrics targeting likelihood or acceptance ratio
 	\end{itemize}
+\item Should also take into account predictive standard errors, both average uncertainty and extreme areas of uncertainty
 \end{itemize}
 
 \subsection{Planned Parameter Calibration Tests}
