Minor update to notes

--- a/gp_calibration_questions.tex
+++ b/gp_calibration_questions.tex
@@ -458,6 +458,8 @@ Knapik et al (2011) give the closed-form posterior in this setting:
 &S = \Lambda - A(\tau^{-1}I_n + F \Lambda F^T)A^T
 \end{align*}
 
+Note that without the addition of $i$ in $f(u, i)$ the injective constraint would not hold. An example of a model with input space $\R^2$ that yields a linear, injective mapping $F$ is 
+$f(u, i) = u_1 i + u_2 i^2$.
 
 \subsubsection{Comparing to the ``fully Bayesian'' approach}
 It would be interesting to compare the current approach to the fully Bayesian approach. This would especially be true for the Laplace likelihood, as it would allow sampling of 
